[package]
name = "jsonrpc"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[lib]
name = "jsonrpc"

[dependencies]
#rustc-serialize = "*"

[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"
git = "https://github.com/zonyitoo/rustc-serialize.git"
